# optimization-algorithms

./: BDS.cpp  CMakeLists.txt  OptimizationAlgorithms.cpp  OptimizationAlgorithms.h  README.md  lagrange.cpp  simulated_annealing.cpp
